--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,8 +11,6 @@
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-
-
         <activity
             android:name=".Splash"
             android:label="@string/app_name"
@@ -23,24 +21,17 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-
         <activity
             android:name=".FullscreenActivity"
             android:configChanges="orientation|keyboardHidden|screenSize"
             android:label="@string/title_activity_fullscreen"
-            android:theme="@style/FullscreenTheme">
-
-        </activity>
-
-
+            android:theme="@style/FullscreenTheme"></activity>
         <activity
             android:name=".MainActivity2"
             android:label="@string/title_activity_main"
             android:theme="@style/AppTheme.NoActionBar" />
         <activity android:name=".RecyclerView.MyActivity" />
-
         <activity android:name=".LoadImageTest" />
-
         <activity
             android:name=".MyRecycler"
             android:screenOrientation="portrait" />
@@ -49,7 +40,10 @@
             android:label="@string/title_activity_my_recycler_tablet"
             android:screenOrientation="landscape"
             android:theme="@style/AppTheme.NoActionBar" />
-
+        <activity
+            android:name=".MainNavigation"
+            android:label="@string/title_activity_main_navigation"
+            android:theme="@style/AppTheme.NoActionBar"></activity>
     </application>
 
 </manifest>
